--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.sql.init.mode=always
 
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=root
+spring.datasource.password=root
+#---
+spring.config.activate.on-profile=test
 spring.datasource.url=jdbc:h2:file:./db/filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
