feat: добавить поддержку ssl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#---
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:ssl/test_ssl.pfx
+server.ssl.key-store-password=*****
+server.port=8443
